--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pdf-master": "^1.1.0",
     "pdfkit": "^0.14.0",
     "pdfmake": "^0.2.8",
+    "puppeteer": "^21.5.2",
     "puppeteer-core": "^21.5.2",
     "validator": "^13.11.0"
   }
